<resources>
    <string name="app_title">School Chimes</string>
    <string name="app_name">School Chimes</string>
    <string name="app_version_id">18</string>
    <string name="app_id">3</string>
    <string name="flavour_name">Flavour</string>
    <string name="location_add_instructions_attendance">Accurate location settings are crucial for ensuring that attendance is only marked when users are within the designated area of the institute. Please double-check the location before submitting.\n\nOnce saved, this location will be used to verify the proximity of users when they mark their attendance. Ensure that the location is correct as it will directly impact attendance functionality.</string>
    <string name="outside_of_the_location">Note : You are outside the institutes boundary. you will not be able to mark your attendance.\n\nPlease try again when you are within the designated area.</string>
    <string name="mark_attendance_instruction">Tap on the <b>\"Punch\"</b> button to record your attendance for the day. A confirmation message will appear once your attendance is successfully marked.</string>
    <string name="selected">selected</string>
    <string name="done">Done</string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
    <string name="app_sub_title">for Parents</string>
    <string name="txt_menu_help">Help</string>
    <string name="txt_menu_logout">Logout</string>
    <string name="txt_menu_settings">Settings</string>
    <string name="txt_menu_change_password">Change Password</string>
    <string name="txt_copyright">© Savyasasy 2019. All rights reserved.</string>
    <string name="txt_hello">Hello! \n Please fill out the form below to get started.</string>
    <string name="txt_signin">Sign in here.</string>
    <string name="txt_mobile">Mobile Number</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="hint_save_image">Click here to View full image</string>
    <string name="btn_save_image">Save Image</string>
    <string name="btn_download_image">Download Image</string>
    <string name="txt_new">New</string>
    <string name="sample_txt_msg">Savyasasy is an innovative provider of Voice based Solutions and Products that add value to enterprises across the business value chain. From a technology perspective, we harness CTI, IVR and Web Technologies along with a deep understanding of Business Process Engineering to create value to Enterprises across the Business Value Chain.</string>
    <string name="hint_play_voice">Press the Play button to play the voice message</string>
    <string name="hint_view_pdf">Press the Download button to download the attached file</string>
    <string name="btn_pdf_view">View File</string>
    <string name="btn_pdf_save">Download</string>
    <string name="btn_voice_play">Play Audio</string>
    <string name="btn_voice_save">Download</string>
    <string name="pop_password_title">Change Password</string>
    <string name="pop_password_txt_exist">Existing Password</string>
    <string name="pop_password_hint_exist">Enter Existing Password</string>
    <string name="pop_password_txt_new">New Password</string>
    <string name="pop_password_hint_new">Enter New Password</string>
    <string name="pop_password_txt_repeat">Verify New Password</string>
    <string name="pop_password_hint_repeat">Confirm New Password</string>
    <string name="pop_password_btnUpdate">Update</string>
    <string name="pop_password_btnCancel">Cancel</string>
    <string name="pop_response_title_help">Help</string>
    <string name="pop_response_btn_send">Send</string>
    <string name="pop_response_hint_msg">Enter message here..</string>
    <string name="pop_response_txt_count">460</string>
    <string name="txt_test_ques">Did you accept?</string>
    <string name="rb_yes">Yes</string>
    <string name="rb_no">No</string>
    <string name="btn_sign"><u>Sign here</u></string>
    <string name="btn_sign_cancel">Cancel</string>
    <string name="btn_sign_clear">Clear</string>
    <string name="btn_sign_submit">Submit</string>
    <string name="txt_signhere">Your Signature..</string>
    <string name="external_dir">GetSignature</string>
    <string name="hint_leave_reason">Reason for leave</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="btn_apply">Inform</string>
    <string name="hint_attendance">Your ward attendance report for past 30 working days</string>
    <string name="home_emergency">Emergency Voice</string>
    <string name="home_voice_parents">General Voice </string>
    <string name="home_text_parents">Text Messages</string>
    <string name="home_notice_board">Notice Board</string>
    <string name="home_events">School Events</string>
    <string name="home_photos">Images</string>
    <string name="home_absentees">Absentees</string>
    <string name="home_call_message_usage">Calls  SMS usage</string>
    <string name="home_documents">Circulars</string>
    <string name="home_homework_text">Homework</string>
    <string name="home_homework_voice">Voice Homework</string>
    <string name="home_exam">Exam/Test</string>
    <string name="home_attendance">Attendance Report</string>
    <string name="home_leave_request">Leave Information</string>
    <string name="catch_message">Something went wrong.Try Again</string>
    <string name="else_error_message">Something went wrong.Try Again</string>
    <string name="Error_message">Check your Internet connectivity</string>
    <string name="home_pay_fees">Fee Details</string>
    <string name="teacher_app_title">Schools V4</string>
    <string name="teacher_app_name">Savyasasy Schools</string>
    <string name="teacher_app_sub_title"></string>
    <string name="teacher_school_msg"></string>
    <string name="teacher_app_version_id">120</string>
    <string name="teacher_app_version_name">3.4</string>
    <string name="teacher_app_id">3</string>
    <string name="teacher_app_version_code">21</string>
    <string name="teacher_txt_copyright">© Savyasasy 2019. All rights reserved.</string>
    <string name="teacher_nb_hint_title">Type News Topic</string>
    <string name="teacher_nb_hint_msg">Type content here</string>
    <string name="teacher_events_date">Date</string>
    <string name="teacher_events_time">Time</string>
    <string name="teacher_events_hint_title">Event Topic</string>
    <string name="teacher_events_hint_msg">Type Event content here</string>
    <string name="teacher_event_txt_datetime">Date Time</string>
    <string name="teacher_pop_remove_title">Remove Group</string>
    <string name="teacher_pop_remove_msg">Are you sure? Do you want to remove this group?</string>
    <string name="teacher_pop_remove_btn_yes">Ok</string>
    <string name="teacher_pop_remove_btn_no">Cancel</string>
    <string name="teacher_txt_hello">Hello! \n Please fill out the form below to get started.</string>
    <string name="teacher_txt_signin">Sign in here.</string>
    <string name="teacher_txt_mobile">Mobile Number</string>
    <string name="teacher_hint_mobile">Enter Mobile Number</string>
    <string name="teacher_hint_password">Enter Password</string>
    <string name="teacher_btn_login">Login</string>
    <string name="teacher_btn_forgot_password">Forgot Password?</string>
    <string name="teacher_txt_hello1">Hello! \n What would you like to send today?</string>
    <string name="teacher_txt_voice"><b>Voice</b> message</string>
    <string name="teacher_txt_text"><b>Text</b> or <b>Home Work</b></string>
    <string name="teacher_txt_Image"><b>Image</b></string>
    <string name="teacher_txt_attendance">Mark <b>Attendance</b></string>
    <string name="teacher_txt_composemsg">Compose Text Message</string>
    <string name="teacher_txt_composehwmsg">Compose Homework Message</string>
    <string name="teacher_txt_composeExammsg">Create Exam</string>
    <string name="teacher_txt_onwhat">On what?</string>
    <string name="teacher_txt_typemsg">Content?</string>
    <string name="teacher_txt_hw_title">HomeWork Topic</string>
    <string name="teacher_txt_exam_title">Exam Name</string>
    <string name="teacher_txt_exam_typemsg">Exam Description</string>
    <string name="teacher_staff_to_sections">TO STANDARD OR SECTIONS</string>
    <string name="teacher_staff_to_students">TO SECTION OR STUDENTS</string>
    <string name="teacher_staff_hint_title">Title/Subject</string>
    <string name="teacher_txt_composeImg">Upload Image/PDF</string>
    <string name="teacher_image_hint_title">About Image/PDF</string>
    <string name="teacher_txt_Recordvoice">Record Voice Message</string>
    <string name="teacher_txt_recorded_voice">Recorded Voice Message</string>
    <string name="teacher_txt_start_record">Press the button to <b>RECORD</b></string>
    <string name="teacher_txt_stop_record">Press the button to <b>STOP RECORD</b></string>
    <string name="teacher_txt_PreviewVoice">Listen <b>Voice</b> Message</string>
    <string name="teacher_txt_next">Next</string>
    <string name="teacher_txt_sendimg">Send Image</string>
    <string name="teacher_txt_chgimg">CHANGE IMAGE/PDF</string>
    <string name="teacher_txt_general_title">You can record upto 3 minutes</string>
    <string name="teacher_txt_emergency_voice">Record Emergency Voice</string>
    <string name="teacher_txt_emergency_title">You can record upto 30 seconds</string>
    <string name="teacher_txt_send">Send</string>
    <string name="teacher_choose_recipient">Choose Recipients</string>
    <string name="teacher_send_entire_school">Send to All schools</string>
    <string name="teacher_txt_selectStudents">Select Students</string>
    <string name="teacher_Select_class">Select classes</string>
    <string name="teacher_Select_group">Select groups</string>
    <string name="teacher_or">Or</string>
    <string name="teacher_txt_menu_help">Help</string>
    <string name="teacher_txt_menu_logout">Logout</string>
    <string name="teacher_txt_menu_change_password">Change Password</string>
    <string name="teacher_title_attendance">Attendance</string>
    <string name="teacher_atten_standard">Standard</string>
    <string name="teacher_atten_section">Section</string>
    <string name="teacher_btn_choose_students">Select Absentees</string>
    <string name="teacher_btn_mark_all_present">Mark All as Present</string>
    <string name="_26_jan_2017">26 Jan 2017</string>
    <string name="_26_jan_2017_date">26 Jan 2017</string>
    <string name="name_pdf">name</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="send_to_entire_school">Send to Entire school</string>
    <string name="send_to_standard_groups">Send to Standard/Groups</string>
    <string name="send_to_standard_section">Send to Standard/section</string>
    <string name="language_change">Change Language</string>
    <string name="leave_history">Leave History</string>
    <string name="requesttttt">Send Request</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="choose_your_account">Choose your account</string>
    <string name="teacher">Teacher</string>
    <string name="parent">Parent</string>
    <string name="send_to_staff">SEND TO STAFF</string>
</resources>