<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.BaseActivity">
    <item
        android:id="@+id/menu_homeOption"
        android:icon="@drawable/ic_more_vert"
        android:visible="false"
        android:title="action_notification"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_homeHelp"
                android:icon="@drawable/menu_help"
                android:title="@string/txt_menu_help" />

            <item
                android:id="@+id/menu_homeChangePassword"
                android:icon="@drawable/menu_change_password"
                android:title="@string/txt_menu_change_password" />


            <item
                android:id="@+id/menu_language_change"
                android:icon="@drawable/translation"
                android:title="@string/language_change" />
            <item
                android:id="@+id/menu_homeLogout"
                android:icon="@drawable/menu_logout"
                android:title="@string/txt_menu_logout" />


        </menu>
    </item>
</menu>