<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:enabled="true">
        <item
            android:id="@+id/menu_home"
            android:enabled="true"
            app:showAsAction="always"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:enabled="true"
            app:showAsAction="always"
            android:id="@+id/menu_language_change"
            android:icon="@drawable/language"
            android:title="@string/language_change" />

        <item
            android:enabled="true"
            app:showAsAction="always"
            android:id="@+id/menu_more"
            android:icon="@drawable/menu"
            android:title="@string/more" />
    </group>
</menu>

    <!--
         app:actionLayout="@layout/menu_call_action_layout"
         android:icon="@drawable/ic_bm_calls"
      tools:ignore="MenuTitle"-->