<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/emergVoice_rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/emergVoice_ToolBarIvBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            app:srcCompat="@drawable/teacher_ic_close" />

        <TextView
            android:id="@+id/emergVoice_ToolBarTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/emergVoice_ToolBarIvBack"
            android:layout_toRightOf="@+id/emergVoice_ToolBarIvBack"
            android:textColor="@color/teacher_clr_white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="@string/name_pdf" />
    </RelativeLayout>


    <Button
        android:id="@+id/SendToEntireSchool"
        style="@style/Teacher_btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/send_to_entire_school"
        android:textSize="16sp" />

    <Button
        android:id="@+id/SendToStansGroups"
        style="@style/Teacher_btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/send_to_standard_groups"
        android:textSize="16sp" />

    <Button
        android:id="@+id/SendToSpecificSection"
        style="@style/Teacher_btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/send_to_standard_section"
        android:textSize="16sp" />

    <Button
        android:id="@+id/SendToStaff"
        style="@style/Teacher_btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/send_to_staff"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>