<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".activity_SINGAPORE.TeacherAttendanceScreen_SNGPR">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/attendance_rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/attendance_IvBack"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                app:srcCompat="@drawable/teacher_ic_arrow_back" />

            <TextView
                android:id="@+id/attendance_tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/attendance_IvBack"
                android:layout_toRightOf="@+id/attendance_IvBack"
                android:text="@string/teacher_title_attendance"
                android:textColor="@color/teacher_clr_white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/attendance_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/teacher_atten_standard"
            android:textColor="@color/teacher_clr_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/attendance_spinStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/attendance_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/teacher_atten_section"
            android:textColor="@color/teacher_clr_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/attendance_spinSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/attendance_btnMarkAllPresent"
            style="@style/Teacher_btn_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/teacher_btn_mark_all_present"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/attendance_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/teacher_or"
            android:textColor="@color/teacher_clr_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/attendance_btnSelectStudents"
            style="@style/Teacher_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/teacher_btn_choose_students"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>