<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/teacher_img_app_bg"
    tools:context=".activity_USA.TeacherSignInScreen_USA"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/teacher_app_name"
        app:srcCompat="@drawable/teacher_logo_voicesnap" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_otp"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtOtp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_stroke_grey"
            android:inputType="number"
            android:paddingLeft="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/btnResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teacher_colorPrimary"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:textStyle="normal"
                android:textSize="15dp"
                android:text="@string/resend_otp" />


            <Button
                android:id="@+id/btnSubmitOtp"
                style="@style/Teacher_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_sign_submit" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
