<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_app_bg"
    android:fitsSystemWindows="true"
    tools:context=".activity.ApplyLeave">



    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
     />


    <LinearLayout
        android:layout_below="@+id/adView"
        android:padding="15dp"
        android:id="@+id/appLeave_ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appLeave_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/txt_from" />

        <TextView
            android:id="@+id/appLeave_tvFromDate"
            style="@style/txt_black_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/ic_arrow_down_grey"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:text="@string/_26_jan_2017" />

        <Button
            android:id="@+id/btnLeaveHistory"
            android:layout_width="wrap_content"
            style="@style/btn_login"
            android:text="@string/leave_history"
            android:layout_height="wrap_content" />
    </LinearLayout>




    <LinearLayout
        android:paddingHorizontal="15dp"
        android:id="@+id/appLeave_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLeave_ll1"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appLeave_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/txt_to" />

        <TextView
            android:id="@+id/appLeave_tvToDate"
            style="@style/txt_black_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:drawablePadding="7dp"
            android:drawableRight="@drawable/ic_arrow_down_grey"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:text="@string/_26_jan_2017_date" />
    </LinearLayout>

    <EditText
        android:layout_marginHorizontal="15dp"
        android:id="@+id/applyleave_etReason"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/appLeave_ll2"
        android:layout_marginTop="20dp"
        android:background="@color/bpWhite"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_leave_reason"
        android:inputType="textMultiLine"
        android:maxLength="150"
        android:maxLines="10"
        android:minLines="7"
        android:padding="7dp"
        android:textSize="12dp" />

    <Button
        android:id="@+id/appLeave_btnSignIn"
        style="@style/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applyleave_etReason"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/requesttttt" />

    <include
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bannerView"
        android:layout_marginTop="10dp"
        layout="@layout/ads_view"/>




    <RelativeLayout
        android:id="@+id/native_ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/lblClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_rounded_block_close"
            android:textColor="@color/clr_black"
            android:visibility="gone" />


        <FrameLayout
            android:layout_below="@+id/lblClose"
            android:id="@+id/native_ad_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

    </RelativeLayout>


</RelativeLayout>